2008-09-03  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkarrow.c: expose-event returns gboolean not gint,
	reindented static prototypes and did some minor cleanups.

2008-09-03  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkmenu.c: some more trivial cosmetic fixes.

2008-09-03  Christian Dywan  <christian@imendio.com>

	Bug 547449 – Entry/ Combo popup misplaced after resize

	* gtk/gtkcombobox.c (gtk_combo_box_menu_position),
	(gtk_combo_box_size_allocate): reposition the combo popup when the
        allocation changes
	* gtk/gtkentry.c (gtk_entry_size_allocate): reposition the
        completion popup when the allocation changes

2008-09-03  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkmenu.c (get_arrows_visible_area): proper function header
	formatting.

2008-09-02  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkdialog.c (gtk_dialog_delete_event_handler): return
	gboolean instead of gint. Reindent static prototypes.

2008-09-02  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkwidget.c (gtk_widget_get_allocation): removed this
	function because there is massive disagreement about how to
	implement it. Needs some general discussion in the next
	development cycle about how our C api should evolve.

	* gtk/gtk.symbols: changed accordingly.

2008-09-01  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gtk/gtkselection.c:
	Update documentation for gtk_selection_data_get_data to
	match the changes introduced in -r21232 (the length
	parameter was removed).

2008-08-30  Matthew Barnes  <mbarnes@redhat.com>

	Bug 549943 – gtk_tool_shell_get_relief_style() always returns
	GTK_RELIEF_NONE

	* gtk/gtktoolshell.c (gtk_tool_shell_get_relief_style): Return
	the correct relief style.

2008-08-29  Björn Lindqvist  <bjourne@gmail.com>

	Bug 437791 – Animation is played at the wrong speed

	* gdk-pixbuf/io-gif.c (gif_get_lzw): Better 100 ms timeout for
	broken GIFs with 0 frame timeout.

2008-08-29  Christian Dywan  <christian@imendio.com>
